[project]
name = "snowman-py"
version = "0.0.34"
description = "Python model and query builder for Snowflake."
readme = "README.md"
requires-python = ">= 3.9"
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dependencies = [
  "pydantic>=2.7.1",
  "snowflake-connector-python>=3.10.1",
  "typing-extensions>=4.12.0",
]

[dependency-groups]
dev = [
  "griffe>=0.45.3",
  "griffe-inherited-docstrings>=1.0.0",
  "mkdocs>=1.6.0",
  "mkdocs-awesome-pages-plugin>=2.9.2",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-material[imaging]>=9.5.26",
  "mkdocs-plugin-inline-svg>=0.1.0",
  "mkdocstrings[python]>=0.25.1",
  "mypy>=1.11.2",
  "pandas>=2.2.2",
  "pandas-stubs>=2.2.1.240316",
  "pip>=24.0",
  "pyarrow>=16.1.0",
  "pyarrow-stubs>=10.0.1.7",
  "pyright>=1.1.361",
  "pytest>=8.2.1",
  "pytest-mock>=3.14.0",
  "ruff>=0.4.3",
  "turu[snowflake]>=0.11.1",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snowman"]

[tool.maturin]
bindings = "bin"
manifest-path = "rust/snowman/Cargo.toml"
module-name = "snowman"
python-source = "python/src"

[tool.mypy]
disable_error_code = ["assert-type"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
filterwarnings = ["ignore::DeprecationWarning:snowflake"]
norecursedirs = ["site", "examples"]
