[project]
name = "snowman-sample"
version = "0.0.34"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.9"
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
dependencies = [
  "pydantic>=2.7.1",
  "snowman @ file:///${PROJECT_ROOT}/examples/snowman_sample/../..",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snowman_sample"]
