[package]
name = "snowman"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Python model and query builder for Snowflake."
license.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
console = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools.workspace = true
openssl.workspace = true
serde_json = { workspace = true }
similar = { workspace = true }
snowman_config.workspace = true
snowman_connector.workspace = true
snowman_generator.workspace = true
tempfile = { workspace = true }
tokio.workspace = true
