[package]
name = "snowman_connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
openssl = { workspace = true }
serde_json = { workspace = true }
snowflake-connector-rs = { workspace = true }
thiserror = { workspace = true }
